# asciify

./: .clang-uml  .gitignore  CMakeLists.txt  LICENSE  README.md
.nvim/: tasks.json
code/: .gitignore  CMakeLists.txt
code/.nvim/: tasks.json
code/include/: color.hpp  conviniences.hpp  dims.hpp  font.hpp  vec.hpp
code/include/ascii/: ascii_art.hpp  ascii_art_writer.hpp  ascii_effect.hpp  ascii_el.hpp  color_ascii_effect.hpp  edge_ascii_effect.hpp  fill_ascii_effect.hpp
code/include/ascii/effect/: ascii_effect.hpp  color_ascii_effect.hpp  edge_ascii_effect.hpp  fill_ascii_effect.hpp
code/include/ascii/filter/: ascii_filter.hpp  color_ascii_filter.hpp  edge_ascii_filter.hpp  fill_ascii_filter.hpp
code/include/effect/: ascii_art.hpp  ascii_effect.hpp  color_ascii_effect.hpp  effect.hpp  fill_ascii_effect.hpp
code/include/image/: image.hpp  image_factory.hpp  image_loader.hpp  jpeg_image.hpp  webp_image.hpp
code/include/image/codec/: image_codec.hpp  jpeg_codec.hpp  webp_codec.hpp
code/include/image/filter/: convolution.hpp  dog_filter.hpp  dog_image_filter.hpp  filter.hpp  image_cnvl_kernel.hpp  image_filter.hpp  sobel_filter.hpp  sobel_image_filter.hpp
code/lua/telescope/_extensions/: asciify.lua  init.lua
code/lua/telescope/_extensions/asciify/: init.lua
code/plugin/: asciify_telescope.lua  init.lua  libasciify.lua
code/src/: c_glue.cpp  font.cpp  main.cpp
code/src/ascii/: ascii_art.cpp  color_ascii_effect.cpp  edge_ascii_effect.cpp
code/src/ascii/filter/: edge_ascii_filter.cpp
code/src/image/: image_loader.cpp  jpeg_image.cpp  webp_image.cpp
code/src/image/codec/: image_codec.cpp
code/src/lib/: font.cpp
code/src/lib/ascii/filter/: edge_ascii_filter.cpp
code/src/lib/image/codec/: image_codec.cpp  jpeg_codec.cpp  webp_codec.cpp
docs/: README.md  README.ru.md  class_diagram.odg  flowchart_CnvlKernel.odg  flowchart_CnvlKernel_non_simplified.odg  flowchart_EdgeAsciiFilter.odg
docs/doxygen/: Doxyfile
include/: conviniences.hpp  dims.hpp  font.hpp
include/ascii/: ascii_art_writer.hpp
include/ascii/filter/: color_ascii_filter.hpp  fill_ascii_filter.hpp
include/image/: image.hpp  image_filter.hpp
include/image/ascii/: ascii.hpp  ascii_writer.hpp
include/image/ascii/filter/: ascii_filter.hpp  color_ascii_filter.hpp  (+2 more)
include/image/bitmap/: bitmap.hpp
include/image/codec/: webp_codec.hpp
include/image/filter/: dog_image_filter.hpp  image_cnvl_kernel.hpp  sobel_image_filter.hpp
lua/asciify/: libasciify.lua
lua/telescope/_extensions/: asciify.lua
src/: c_glue.cpp  main.cpp
src/lib/: font.cpp
z_legacy/: appendix.docx
(+10 files in other folders)
